--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.7.2
   file_picker: ^10.3.3
   lucide_icons_flutter: ^3.1.5
+  archive: ^4.0.7
 
 dev_dependencies:
   flutter_test:
